# observatoire-telecom

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: mcp.json
.github/workflows/: ci.yml
docs/: ROADMAP.md  data-dictionary.md
docs/adr/: ADR-001-duckdb-spatial.md  ADR-002-mcp-fastmcp.md  ADR-003-vector-tiles-pmtiles.md  ADR-004-agent-hub-spoke.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js  charts.js  map.js
scripts/: generate_tiles.py  load_sncf_data.py  run_full_pipeline.py  seed_sample_data.py
src/observatoire/: __main__.py  config.py
src/observatoire/agent/: coordinator.py
src/observatoire/agent/prompts/: analysis.py
src/observatoire/agent/sub_agents/: analyzer.py  fetcher.py  reporter.py
src/observatoire/api/: deps.py  main.py
src/observatoire/api/routers/: antennas.py  coverage.py  routes.py  stats.py
src/observatoire/db/: connection.py  queries.py  schema.py  simplify.py
src/observatoire/ingestion/: downloader.py  extractor.py  loader.py  sncf_downloader.py  sncf_loader.py
src/observatoire/mcp/: __main__.py  prompts.py  resources.py  server.py  tools.py
tests/: conftest.py
tests/test_agent/: test_agent_e2e.py  test_coordinator.py
tests/test_api/: test_antennas.py  test_main.py  test_routes.py
tests/test_db/: test_railway_schema.py  test_schema.py
tests/test_ingestion/: test_downloader.py  test_extractor.py  test_sncf_downloader.py
tests/test_mcp/: test_server.py  test_tools_integration.py
(+4 files in other folders)
